<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="atmempresaconsultoria.livroandroid.com.appdengue.MainActivity"
    android:background="#fefcfc">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/texto_logo"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="800dp"
        android:id="@+id/scrollView"
        android:background="#fefefe"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp">

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:background="#fefcfc"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menumosquitoId"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/menudengue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texto_dengue"
                android:id="@+id/textView2"
                android:textColor="#040404"
                android:layout_below="@+id/menumosquitoId"
                android:layout_alignEnd="@+id/menumosquitoId" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menusintomasId"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/menusintomas" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txto_sintomas"
                android:id="@+id/textView3"
                android:textColor="#040303"
                android:layout_below="@+id/menusintomasId"
                android:layout_alignStart="@+id/menusintomasId"
                android:layout_marginStart="16dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menucontagioId"
                android:src="@drawable/menucontagio"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texto_contagio"
                android:id="@+id/textView4"
                android:textColor="#040303"
                android:layout_below="@+id/menucontagioId"
                android:layout_alignStart="@+id/textView2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menutratamentoId"
                android:layout_alignTop="@+id/menucontagioId"
                android:layout_alignStart="@+id/menusintomasId"
                android:src="@drawable/menutratamento" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texto_tratamento"
                android:id="@+id/textView5"
                android:textColor="#040404"
                android:layout_below="@+id/menutratamentoId"
                android:layout_alignStart="@+id/textView3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/outrasdoencasId"
                android:src="@drawable/menuprevencao"
                android:layout_alignTop="@+id/prevencaoId"
                android:layout_alignStart="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texto_prevencao"
                android:id="@+id/textView7"
                android:layout_below="@+id/outrasdoencasId"
                android:layout_alignEnd="@+id/outrasdoencasId"
                android:textColor="#040404" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prevencaoId"
                android:src="@drawable/menuoutrasdoencas"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/texto_outrasdoencas"
                android:id="@+id/textView6"
                android:layout_below="@+id/prevencaoId"
                android:layout_alignEnd="@+id/prevencaoId"
                android:textColor="#040303"
                android:textSize="15dp" />


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
